--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,33 +43,26 @@ main{
   overflow: hidden;
 }
 
-.slick-dots{
+.slick-dots {
   display: flex;
-  justify-content: center;
   align-items: center;
+  li{
+    margin: 0 4px;
+    button {
+      font-size: 0;
+      width: 12px;
+      height: 12px;
+      background-color: rgba(255,255,255,0.0);
+      border: 2px solid #ffffff;
+      border-radius: 50%;
+    }
+  }
 }
 
-.slick-dots li{
-  margin: 0 7px;
-}
-
-.slick-dots button{
-  font-size: 0;
-  width: 12px;
-  height: 12px;
-  background-color: rgba(255,255,255,0.0);
-  border: 2px solid #ffffff;
-  border-radius: 50%;
-}
-/*
-.slick-active{
-  font-size: 0;
-  border-radius: 50%;
-  width: 12px;
-  height: 12px;
+.slick-dots li.slick-active button {
   background-color: #ffffff;
-}*/
-
+  opacity: 1;
+}
 @import "_header.scss";
 @import "_banner.scss";
 @import "_benefits.scss";
