--- a/scss/_share.scss
+++ b/scss/_share.scss
@@ -4,6 +4,7 @@
     .share-img{
       margin-top: 72px;
       margin-left: 80px;
+      img{}
     }
     .share-item {
       padding-left: 11px;
