--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,4 +67,5 @@ main{
 @import "_banner.scss";
 @import "_benefits.scss";
 @import "_share.scss";
+@import "_new-features.scss";
 @import "_adaptive.scss";
