--- a/scss/style.scss
+++ b/scss/style.scss
@@ -68,4 +68,5 @@ main{
 @import "_benefits.scss";
 @import "_share.scss";
 @import "_new-features.scss";
+@import "_photos.scss";
 @import "_adaptive.scss";
