--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,92 @@ main {
   letter-spacing: 0.1px;
 }
 
+.photos .container-custom h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 48px;
+  line-height: 1.2;
+  font-weight: 600;
+  color: #f06464;
+  margin-top: 70px;
+  margin-left: 76px;
+}
+.photos .container-custom .photos-info {
+  margin-top: 20px;
+  margin-left: 80px;
+  font-size: 18px;
+  line-height: 27px;
+  font-weight: 400;
+  color: #666666;
+  letter-spacing: 0.07px;
+  max-width: 450px;
+  margin-bottom: 76px;
+}
+.photos .photos__list {
+  display: flex;
+}
+.photos .photos__list .image-first {
+  width: 464px;
+}
+.photos .photos__list .image-second {
+  width: 519px;
+}
+.photos .photos__list .image-third {
+  width: 519px;
+}
+.photos .photos__list .image-fourth {
+  width: 501px;
+}
+.photos .photos__list .image-container {
+  position: relative;
+  padding: 0;
+}
+.photos img {
+  height: 519px;
+  width: 100%;
+}
+
+.image-container:hover img {
+  transform: translateY(-10.7%) scale(1, 0.94);
+  transition: 0.5s ease;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #151515;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 0.5s ease;
+}
+
+.image-container:hover .overlay {
+  height: 87px;
+}
+
+.text {
+  font-size: 18px;
+  line-height: 27px;
+  font-weight: 400;
+  color: #c2c2c2;
+  position: absolute;
+  top: 50%;
+  left: 33%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+.text p {
+  display: inline-block;
+}
+.text button {
+  color: red;
+}
+.text button:hover {
+  color: red;
+}
+
 @media (max-width: 1800px) {
   .banner {
     background: #de5d5d url("../img/iphone.png") 50% 0 no-repeat;
