--- a/scss/_new-features.scss
+++ b/scss/_new-features.scss
@@ -2,7 +2,7 @@
   background-color: #313131;
   .container-custom{
     .new-features__img{
-      margin-top: 54px;
+      margin-top: 57px;
       margin-left: 12px;
     }
     .features-item{
@@ -15,11 +15,15 @@
         border-radius: 0 0 5px 5px;
         li {
           margin: 31px 4px;
+          button{
+            height: 12px;
+            width: 12px;
+          }
         }
       }
       &__title{
         font-family: 'Montserrat', sans-serif;
-        @include mtl(168px,69px);
+        @include mtl(170px,69px);
         font-size: 46px;
         letter-spacing: 1.6px;
         line-height: 1.2;
