--- a/scss/_adaptive.scss
+++ b/scss/_adaptive.scss
@@ -1,3 +1,17 @@
+@media (max-width: 1860px) {
+  .photos{
+    .photos__list{
+      .image-container{
+        .overlay {
+          &__menu {
+            width: 300px;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 1800px){
   .banner{
     background: #de5d5d url('../img/iphone.png') 50% 0 no-repeat;
@@ -12,6 +26,23 @@
       }
     }
   }
+
+  .photos{
+    .photos__list{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      .image-container{
+        width: 500px;
+        margin: 0 auto 50px auto;
+        .overlay {
+          &__menu {
+            width: 300px;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 1400px){
@@ -19,6 +50,48 @@
     .container-custom {
       .share-img {
         margin-left: 0;
+      }
+    }
+  }
+  .photos{
+    .photos__list{
+      .image-first{
+        width: 464px;
+      }
+      .image-second{
+        width: 518px;
+      }
+      .image-third{
+        width: 519px;
+      }
+      .image-fourth{
+        width: 498px;
+      }
+      .image-container {
+        .overlay {
+          bottom: 0;
+          left: 0;
+          right: 0;
+          overflow: hidden;
+          width: 100%;
+          height: 0;
+          &__menu {
+            top: 55%;
+            left: 49.5%;
+            width: 450px;
+            p{
+              display: inline-block;
+            }
+            .likes {
+              right: -3px;
+              top: -1px;
+            }
+          }
+        }
+        img{
+          height: 519px;
+          width: 100%;
+        }
       }
     }
   }
