--- a/css/style.css
+++ b/css/style.css
@@ -513,10 +513,85 @@ main {
 }
 
 .cta {
-  width: 2000px;
   height: 723px;
   background-color: #de5d5d;
 }
+.cta .container-custom__image {
+  margin-top: 224px;
+  margin-left: 66px;
+}
+.cta .container-custom__image img {
+  width: 246px;
+  height: 246px;
+}
+.cta .container-custom .cta-form__info {
+  margin-top: 176px;
+  margin-left: 112px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 44px;
+  line-height: 1;
+  letter-spacing: 2.25px;
+  font-weight: 600;
+  color: #ffffff;
+}
+.cta .container-custom .cta-form__info_second {
+  margin-top: 4px;
+  margin-left: 2px;
+}
+.cta .container-custom .cta-form__info_third {
+  letter-spacing: 1.98px;
+}
+.cta .container-custom .cta-form__source {
+  font-size: 24px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #ffffff;
+  margin-top: 20px;
+  margin-left: 112px;
+}
+.cta .container-custom .cta-form__buttons {
+  margin: 42px 0 0 14.6%;
+  display: flex;
+  justify-content: space-between;
+  max-width: 543px;
+}
+.cta .container-custom .cta-form__buttons_first {
+  display: block;
+  width: 257px;
+  height: 77px;
+  border: 3px solid #ffffff;
+  border-radius: 5px;
+}
+.cta .container-custom .cta-form__buttons_first img {
+  padding: 10px 0 0 19px;
+}
+.cta .container-custom .cta-form__buttons_first .button__text {
+  display: inline-block;
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #ffffff;
+  padding: 16px 0 0 12px;
+}
+.cta .container-custom .cta-form__buttons_second {
+  display: block;
+  width: 257px;
+  height: 77px;
+  border: 3px solid #ffffff;
+  border-radius: 5px;
+}
+.cta .container-custom .cta-form__buttons_second img {
+  padding: 14px 0 0 27px;
+}
+.cta .container-custom .cta-form__buttons_second .button__text {
+  display: inline-block;
+  font-size: 30px;
+  line-height: 1.2;
+  font-weight: 400;
+  color: #ffffff;
+  padding: 16px 0 0 15px;
+}
+
 @media (max-width: 1860px) {
   .photos .photos__list .image-container .overlay__menu {
     width: 300px;
@@ -674,6 +749,24 @@ main {
     color: #ffffff;
     padding: 10px 0 0 15px;
   }
+  .cta .container-custom__image {
+    margin: 40px auto 0 auto;
+  }
+  .cta .container-custom__image img {
+    display: block;
+    margin: 0 auto;
+  }
+  .cta .container-custom .cta-form__info {
+    margin: 40px auto 0 auto;
+    text-align: center;
+  }
+  .cta .container-custom .cta-form__source {
+    margin: 20px auto 0 auto;
+    text-align: center;
+  }
+  .cta .container-custom .cta-form__buttons {
+    margin: 42px auto 30px auto;
+  }
 }
 @media (max-width: 992px) {
   .container {
@@ -784,6 +877,26 @@ main {
   .share .container-custom .share-img {
     margin: 72px auto 0 auto;
   }
+  .cta .container-custom__image {
+    margin: 40px auto 0 auto;
+  }
+  .cta .container-custom__image img {
+    display: block;
+    margin: 0 auto;
+  }
+  .cta .container-custom .cta-form__info {
+    margin: 40px auto 0 auto;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 1px;
+  }
+  .cta .container-custom .cta-form__source {
+    margin: 20px auto 0 auto;
+    text-align: center;
+  }
+  .cta .container-custom .cta-form__buttons {
+    margin: 42px auto 30px auto;
+  }
 }
 @media (max-width: 700px) {
   .photos .container-custom h2 {
@@ -834,6 +947,20 @@ main {
   }
   .share .container-custom .share-item__slider-list .slider-item__paragraph {
     text-align: center;
+  }
+}
+@media (max-width: 600px) {
+  .cta {
+    height: auto;
+  }
+  .cta .container-custom .cta-form__buttons {
+    flex-direction: column;
+  }
+  .cta .container-custom .cta-form__buttons_first {
+    margin: 0 auto;
+  }
+  .cta .container-custom .cta-form__buttons_second {
+    margin: 30px auto 0 auto;
   }
 }
 @media (max-width: 550px) {
