--- a/scss/_adaptive.scss
+++ b/scss/_adaptive.scss
@@ -209,6 +209,28 @@
       }
     }
   }
+  .cta{
+    .container-custom{
+      &__image{
+        margin: 40px auto 0 auto;
+        img{
+          display: block;
+          margin: 0 auto;
+        }
+      }
+      .cta-form__info{
+        margin: 40px auto 0 auto;
+        text-align: center;
+      }
+      .cta-form__source{
+        margin: 20px auto 0 auto;
+        text-align: center;
+      }
+      .cta-form__buttons {
+        margin: 42px auto 30px auto;
+      }
+    }
+  }
 }
 
 @media (max-width: 992px) {
@@ -362,6 +384,30 @@
       }
     }
   }
+  .cta{
+    .container-custom{
+      &__image{
+        margin: 40px auto 0 auto;
+        img{
+          display: block;
+          margin: 0 auto;
+        }
+      }
+      .cta-form__info{
+        margin: 40px auto 0 auto;
+        text-align: center;
+        font-size: 30px;
+        letter-spacing: 1px;
+      }
+      .cta-form__source{
+        margin: 20px auto 0 auto;
+        text-align: center;
+      }
+      .cta-form__buttons {
+        margin: 42px auto 30px auto;
+      }
+    }
+  }
 }
 
 @media (max-width: 700px) {
@@ -430,6 +476,24 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .cta{
+    height: auto;
+    .container-custom{
+      .cta-form__buttons {
+        flex-direction: column;
+        &_first {
+          margin: 0 auto;
+        }
+        &_second{
+          margin: 30px auto 0 auto;
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 550px) {
   .new-features {
     .container-custom {
